log.txt
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\bitcount.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\breadth_first_search.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\bucketsort.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\depth_first_search.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\detect_cycle.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\find_first_in_sorted.py
Agent Output:
File "C:\CodeVSCSummers\code_gen_check\code_db\temp_code\find_first_in_sorted.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\find_first_in_sorted.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
------------------------------------------------------------
Validation Attempt: 1
Fixed Code Path: code_db\temp_code\find_in_sorted.py
Agent Output:
Correct Code! hehe
------------------------------------------------------------
